--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^18.2.0",
     "draft-js": "^0.11.7",
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
